# cflake-engine

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  OLD README.md  README.md  bruh.bat  build.rs  custom_export_addon.py  flow.toml  hierosettings.hiero  pack-resources.bat  rustfmt.toml  test.s
cflake_examples/: Cargo.toml  build.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs  app_utils.rs  components.rs  handler.rs  lib.rs  logger.rs  sleeper.rs  stats.rs  systems.rs  world.rs
crates/app/src/components/: camera.rs  rendering.rs
crates/app/src/resources/: physics.rs
crates/app/src/systems/: camera.rs  camera_system.rs  debugging_system.rs  gui.rs  screenshot_system.rs  stats.rs  window_system.rs
crates/assets/: Cargo.toml
crates/assets/src/: asset.rs  asset_cacher.rs  asset_object.rs  assetc.rs  assets_manager.rs  cacher.rs  command.rs  commands.rs  default.rs  error.rs  global.rs  input.rs  lib.rs  loader.rs  macros.rs  metadata.rs  object_cacher.rs  paths.rs  plugin.rs  raw.rs  system.rs  test.rs  tests.rs
crates/audio/: Cargo.toml
crates/audio/src/: clip.rs  emitter.rs  error.rs  generators.rs  graph.rs  lib.rs  listener.rs  mixers.rs  modifiers.rs  playback.rs  player.rs  sample.rs  source.rs  stream.rs  system.rs  tracker.rs  traits.rs  value.rs
crates/audio/src/generators/: clip.rs  oscilator.rs
crates/audio/src/modifiers/: amplify.rs  buffered.rs  ease.rs  mix.rs  positional.rs  repeat.rs
crates/core/: Cargo.toml
crates/core/src/: batch.rs  callbacks.rs  command.rs  commands.rs  communication.rs  config_file.rs  context.rs  custom_world_data.rs  data.rs  frame_id.rs  game_file.rs  global.rs  global_tasks.rs  lib.rs  local.rs  receiver.rs  sender.rs  settings.rs  shared_world.rs  state.rs  system.rs  task.rs  tasks.rs  world.rs
crates/core/src/settings/: graphics.rs
crates/debug/: Cargo.toml
crates/debug/src/: console.rs  debug.rs  lib.rs  renderer.rs
crates/defaults/: Cargo.toml
crates/defaults/src/: components.rs  default_system.rs  globals.rs  lib.rs  macros.rs  systems.rs  template_system.rs
crates/defaults/src/components/: aabb.rs  camera.rs  chunk.rs  dynamic_edit.rs  name.rs  physics.rs  renderer.rs  rendering.rs  sky.rs  tag.rs  terrain.rs  transforms.rs
crates/defaults/src/globals/: networking.rs  physics.rs  terrain.rs  world.rs
crates/defaults/src/resources/: networking.rs  physics.rs  terrain.rs  world.rs
crates/defaults/src/systems/: audio_system.rs  camera_system.rs  chunk_system.rs  (+16 more)
crates/ecs/: Cargo.toml
crates/ecs/benches/: bench.rs
crates/ecs/ecs-derive/: Cargo.toml
crates/ecs/src/: archetype.rs  bitfield.rs  component.rs  component_registry.rs  components.rs  defaults.rs  ecs_manager.rs  entity.rs  entity_custom_event.rs  error.rs  event.rs  event_handler.rs  global.rs  identifiers.rs  layout.rs  lib.rs  linked_components.rs  linking.rs  load_state.rs  load_unload.rs  macros.rs  manager.rs  manager_special.rs  mask.rs  masks.rs  plugin.rs  prelude.rs  query.rs  registry.rs  scene.rs  stored.rs  system.rs  system_data.rs  test.rs  tests.rs  untyped.rs  utils.rs  vec.rs
crates/fonts/: Cargo.toml
crates/fonts/src/: char.rs  font.rs  font_manager.rs  lib.rs  loader.rs
crates/graphics/: Cargo.toml
crates/graphics/graphics-derive/: Cargo.toml
crates/graphics/src/: active.rs  buffer.rs  context.rs  descriptor.rs  format.rs  lib.rs  material.rs  pass.rs  pipe.rs  pipeline.rs  plugin.rs  pod.rs  reflect.rs  renderpass.rs  scene.rs  shader.rs  staging.rs  system.rs  tests.rs  texel.rs  texture.rs  vulkan.rs
crates/gui/: Cargo.toml
crates/gui/src/: buffers.rs  common.rs  interface.rs  lib.rs  manager.rs  mesh.rs  painter.rs  rasterizer.rs  system.rs
crates/handler/: Cargo.toml
crates/handler/src/: lib.rs
crates/hypo/: Cargo.toml
crates/hypo/src/: lib.rs  system_data.rs
crates/hypo_core/: Cargo.toml
crates/hypo_core/src/: ecs.rs  lib.rs  world.rs
crates/hypo_debug/: Cargo.toml
crates/hypo_debug/src/: debug.rs  lib.rs
crates/hypo_defaults/: Cargo.toml
crates/hypo_defaults/src/: components.rs  defaults.rs  lib.rs  systems.rs
crates/hypo_dev_game/: Cargo.toml  build.rs
crates/hypo_dev_game/src/: main.rs
crates/hypo_main/: Cargo.toml
crates/hypo_main/src/: lib.rs
crates/hypo_rendering/: Cargo.toml
crates/hypo_rendering/src/: compute_shader.rs  lib.rs  material.rs  model.rs  optimizer.rs  renderer.rs  shader.rs  texture.rs  texture2D.rs  texture3D.rs  window.rs
crates/hypo_resources_packer/: Cargo.toml
crates/hypo_resources_packer/src/: lib.rs
crates/hypo_systems/: Cargo.toml
crates/hypo_systems/src/: lib.rs  system.rs  system_data.rs
crates/hypo_terrain/: Cargo.toml
crates/hypo_terrain/src/: chunk.rs  chunk_data.rs  chunk_manager.rs  lib.rs  mesher.rs  tables.rs  terrain.rs  voxel.rs
crates/input/: Cargo.toml
crates/input/src/: axis.rs  button.rs  ids.rs  input.rs  keyboard.rs  keys.rs  lib.rs  mouse.rs  plugin.rs  state.rs  states.rs  system.rs
crates/io/: Cargo.toml
crates/io/src/: error_logger.rs  lib.rs  load_value.rs  logger.rs  manager.rs  saver_loader.rs  value_getter.rs
crates/main/: Cargo.toml
crates/main/src/: lib.rs  main.rs
crates/math/: Cargo.toml
crates/math/src/: bitset.rs  bounds.rs  common.rs  constructive_solid_geometry.rs  csg.rs  frustum.rs  hibitset.rs  hop.rs  intersect.rs  intersection.rs  lib.rs  octree.rs  octrees.rs  shapes.rs  shapes2d.rs  spring.rs  tests.rs  transform.rs  utils.rs
crates/network/: Cargo.toml
crates/network/src/: cache.rs  client.rs  common.rs  connection.rs  data.rs  host.rs  lib.rs  manager.rs  protocols.rs  registry.rs  session.rs  sockets.rs  tests.rs  transport.rs
crates/networking/: Cargo.toml
crates/networking/src/: client.rs  components.rs  errors.rs  lib.rs  packet.rs  server.rs  session.rs  system.rs
crates/physics/: Cargo.toml
crates/physics/src/: angular.rs  colliders.rs  components.rs  identifier.rs  lib.rs  linear.rs  manager.rs  object.rs  params.rs  physics.rs  query.rs  resource.rs  rigidbody.rs  simulation.rs  surface.rs  system.rs  systems.rs  util.rs
(+1620 files in other folders)
