[package]
name = "cflake-engine"
version = "0.0.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "crates/app" }

[workspace]
members = [
    "crates/assets",
    "crates/app",
    "crates/world",
    "crates/graphics",
    "crates/phobos-rs",
    "crates/utils",
    "crates/input",    
    "crates/ecs",  
]

[features]

[workspace.dependencies]
log = "0.4.17"
vek = "0.16.1"
ahash = "0.7.6"
parking_lot = "0.12.0"
lazy_static = "1.4.0"
thiserror = "1.0.37"

[dev-dependencies]
packer = { path = "crates/packer" }

[profile.dev]
opt-level = 3
