[package]
name = "cflake_examples"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cflake-engine-packer = { git = "https://github.com/jedjoud10/cflake-engine-packer" }
veclib = { git = "https://github.com/jedjoud10/veclib" }

[[example]]
name = "empty"