[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5" 
lazy_static = "1.4.0"
spin_sleep = "1.1.0"
mimalloc = "0.1.28"
input = { path = "../input" }
ecs = { path = "../ecs" }
graphics = { path = "../graphics" }
rendering = { path = "../rendering" }
networking = { path = "../networking" }
world = { path = "../world" }
assets = { path = "../assets" }
math = { path = "../math" }
gui = { path = "../gui" }
audio = { path = "../audio" }
utils = { path = "../utils" }
env_logger = "0.9"
serde = "1.0.145"  
log = { workspace = true }
vek = { workspace = true }
ahash = { workspace = true }

[features]
double-precision = ["ecs/double-precision", "math/double-precision"]
two-dim = ["ecs/two-dim", "rendering/two-dim", "math/two-dim"]
extended-tuples = ["ecs/extended-tuples", "utils/extended-tuples"]
extended-bitmasks = ["ecs/extended-bitmasks"]
headless = ["graphics/headless"]