[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.0" 
platform-dirs = "0.3.0"
lazy_static = "1.4.0"
spin_sleep = "1.1.0"
mimalloc = "0.1.28"
input = { path = "../input" }
ecs = { path = "../ecs" }
graphics = { path = "../graphics" }
#rendering = { path = "../rendering" }
networking = { path = "../networking" }
world = { path = "../world" }
assets = { path = "../assets" }
math = { path = "../math" }
#gui = { path = "../gui" }
audio = { path = "../audio" }
utils = { path = "../utils" }
#terrain = { path = "../terrain" }
coords = { path = "../coords" }
#physics = { path = "../physics" }
fern = { version = "0.6.1", features = ["colored"] }
chrono = "0.4.23"
rayon = "1.7.0"
serde = "1.0.145"  
half = { version = "2.1.0", features = ["bytemuck", "num-traits"] }
log = { workspace = true }
vek = { workspace = true }
ahash = { workspace = true }

[features]
extended-tuples = ["ecs/extended-tuples", "utils/extended-tuples", "graphics/extended-tuples"]
extended-bitmasks = ["ecs/extended-bitmasks"]
headless = ["graphics/headless"]
pack-assets = ["assets/pack-assets"]
shaderc-build-from-source = ["graphics/shaderc-build-from-source"]