[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.1-beta"
spin_sleep = "1.1.0"
pollster = "0.2.5"
mimalloc = "0.1.28"
assets = { path = "../assets" }
rendering = { path = "../rendering" }
world = { path = "../world" }
input = { path = "../input" }
ecs = { path = "../ecs" }
utils = { path = "../utils" }
fern = { version = "0.6.1", features = ["colored"] }
chrono = "0.4.23"
log = { workspace = true }
vek = { workspace = true }