[package]
name = "assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
ahash = "0.7.6"
parking_lot = "0.12.0"
threadpool = "1.8.1"
slotmap = "1.0.6"
world = { path = "../world" }