[package]
name = "assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
slotmap = "1.0.6"
world = { path = "../world" }
utils = { path = "../utils" }
cfg-if = "1.0.0"

[features]
debug-assets = []