[package]
name = "assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
world = { path = "../world" }
cfg-if = "1.0.0"
rayon = "1.7.0"
include_dir = "0.7.3"
with_builtin_macros = "0.0.3"

[features]
pack-assets = []
