[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assets = { path = "../assets" }
world = { path = "../world" }
math = { path = "../math" }
ecs = { path = "../ecs" }
rodio = "0.15.0"
vek = "0.15.6"
enum-as-inner = "0.4.0"
