[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assets = { path = "../assets" }
utils = { path = "../utils" }
world = { path = "../world" }
math = { path = "../math" }
ecs = { path = "../ecs" }
cpal = "0.14.0"
hrtf = "0.8.0"
wav = "1.0.0"
minimp3 = "0.5.1"
vek = { workspace = true }
log = { workspace = true }
