[package]
name = "core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.41.0"
gl = "0.14.0"
veclib = { git = "https://github.com/jedjoud10/veclib" }
world_data = { path = "../world_data" }
input = { path = "../input" }
systems = { path = "../systems" }
others = { path = "../others" }
ecs = { path = "../ecs" }
ui = { path = "../ui" }
errors = { path = "../errors" }
rendering = { path = "../rendering" }
resources = { path = "../resources" }
debug = { path = "../debug" }
fonts = { path = "../fonts" }
defaults = { path = "../defaults" }
io = { path = "../io" }