[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.41.0"
no_deadlocks = "1.3.0"
backtrace = "0.3.63"
itertools = "0.10.3"
lazy_static = "1.4.0"
crossbeam-channel = "0.5.1"
veclib = { git = "https://github.com/jedjoud10/veclib" }
input = { path = "../input" }
others = { path = "../others" }
ecs = { path = "../ecs" }
ui = { path = "../ui" }
rendering = { path = "../rendering" }
assets = { path = "../assets" }
debug = { path = "../debug" }
fonts = { path = "../fonts" }
io = { path = "../io" }