[package]
name = "debug"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veclib = { git = "https://github.com/jedjoud10/veclib" }
resources = { path = "../resources" }
others = { path = "../others" }
rendering = { path = "../rendering" }
math = { path = "../math" }
gl = "0.14.0"