[package]
name = "defaults"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veclib = { git = "https://github.com/jedjoud10/veclib" }
main = { path = "../main" }
ahash = "0.7.6"
enum-as-inner = "0.3.3"
log = { version = "0.4.14", features = ["std"] }