[package]
name = "defaults"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
enum-as-inner = "0.3.3"
bitflags = "1.3.2"
rapier3d = "0.11.1"
vek = "0.15.6"
getset = "0.1.2"
parking_lot = "0.12.0"
itertools = "0.10.3"
world = { path = "../world" }
