[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
slotmap = "1.0.6"
getset = "0.1.2"
nohash-hasher = "0.2.0"
parking_lot = "0.12.0"
tinyvec = "1.5.1"
itertools = "0.10.3"
rayon = "1.5.1"
ecs-derive = { path = "./ecs-derive"  }