[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = { path = "../world" }
lazy_static = "1.4.0"
slotmap = "1.0.6"
nohash-hasher = "0.2.0"
parking_lot = "0.12.0"
tinyvec = "1.5.1"
itertools = "0.10.3"
smallvec = "1.8.0"
ahash = "0.7.6"
rayon = "1.5.1"
time = { path = "../time" }
math = { path = "../math" }
vek = "0.15.6"
ecs-derive = { path = "./ecs-derive"  }
seq-macro = "0.3.0"
paste = "1.0.7"
casey = "0.3.3"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "bench"
harness = false

[feature]
two-dim = []