[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = { path = "../world" }
utils = { path = "../utils" }
lazy_static = "1.4.0"
slotmap = "1.0.6"
nohash-hasher = "0.2.0"
tinyvec = "1.5.1"
itertools = "0.10.3"
smallvec = "1.8.0"
math = { path = "../math" }
ecs-derive = { path = "./ecs-derive"  }
seq-macro = "0.3.0"
paste = "1.0.7"
casey = "0.3.3"

vek = { workspace = true }
ahash = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }

[features]
double-precision = ["math/double-precision"]
two-dim = ["math/two-dim"]
extended-tuples = []
extended-bitmasks = []