[package]
name = "fonts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veclib = { git = "https://github.com/jedjoud10/veclib" }
resources = { path = "../resources" }
rendering = { path = "../rendering" }
gl = "0.14.0"
