[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = { path = "../world" }
assets = { path = "../assets" }
math = { path = "../math" }
utils = { path = "../utils" }

# Wgpu and Window creation
wgpu = { version = "0.15", default-features = false, features = ["naga", "expose-ids"] }
winit = "0.28.0"
pollster = "0.2.5"
naga = { version = "0.11.0", features = ["spv-in"] }
shaderc = "0.8.2"

# Utils and helpers
smallvec = "1.10.0"
thread_local = "1.1.4"
nohash-hasher = "0.2.0"
dashmap = "5.4.0"
arrayvec = "0.7.2"
itertools = "0.10.3"
bitflags = "1.3.2"
bytemuck = "1.12.3"
snailquote = "0.3.1"
half = { version = "2.1.0", features = ["bytemuck", "num-traits"] }
paste = "1.0.7"
image = "0.24.5"
once_cell = "1.17.0"

# Common utils
log = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true } 
vek = { workspace = true, features = ["bytemuck"] }
parking_lot = { workspace = true }
lazy_static = { workspace = true }

[features]
headless = []
extended-tuples = []
shaderc-build-from-source = ["shaderc/build-from-source"]