[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = { path = "../world" }
utils = { path = "../utils" }
assets = { path = "../assets" }

# Phobos and Window creation
wgpu = { version = "0.18.0", features = ["naga", "expose-ids"] }
naga = "0.14.1"
winit = "0.29.1-beta"
pollster = "0.2.5"

# Utils and helpers
smallvec = "1.10.0"
thread_local = "1.1.4"
systemstat = "0.2.3"    
nohash-hasher = "0.2.0"
dashmap = "5.4.0"
hdrldr = "0.1.2"
rayon = "1.7.0"
crc32fast = "1.3.2"
arrayvec = "0.7.2"
tbc = "0.3.0"
seq-macro = "0.3.0"
itertools = "0.10.3"
bitflags = "1.3.2"
bytemuck = "1.12.3"
snailquote = "0.3.1"
half = { version = "2.1.0", features = ["bytemuck", "num-traits"] }
paste = "1.0.7"
image = "0.24.5"

# Common utils
log = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true } 
vek = { workspace = true, features = ["bytemuck"] }