[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphics = { path = "../graphics" }
assets = { path = "../assets" }
math = { path = "../math" }
world = { path = "../world" }
nohash-hasher = "0.2.0"
egui = "0.17.0"
egui-winit = "0.17.0"

vek = { workspace = true }
parking_lot = { workspace = true }