[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = { path = "../world" }
graphics = { path = "../graphics" }
rendering = { path = "../rendering" }
assets = { path = "../assets" }
math = { path = "../math" }
egui = "0.22.0"
egui_extras = "0.22.0"
egui-winit = "0.22.0"
bytemuck = "1.12.3"
vek = { workspace = true }