[package]
name = "handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.28.0"
lazy_static = "1.4.0"
spin_sleep = "1.1.0"
defaults = { path = "../defaults" }
world = { path = "../world" }
vek = "0.15.6"
mimalloc = "0.1.28"
