[package]
name = "hypo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hypo_input = { path = "../hypo_input" }
hypo_others = { path = "../hypo_others" }
hypo_ecs = { path = "../hypo_ecs" }
hypo_errors = { path = "../hypo_errors" }