[package]
name = "hypo_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hypo = { path = "../hypo" }
hypo_ecs = { path = "../hypo_ecs" }
hypo_input = { path = "../hypo_input" }
hypo_resources = { path = "../hypo_resources" }