[package]
name = "hypo_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.41.0"
gl = "0.14.0"
hypo = { path = "../hypo" }
hypo_systems = { path = "../hypo_systems" }
hypo_input = { path = "../hypo_input" }
hypo_others = { path = "../hypo_others" }
hypo_ecs = { path = "../hypo_ecs" }
hypo_errors = { path = "../hypo_errors" }
hypo_rendering = { path = "../hypo_rendering" }
hypo_resources = { path = "../hypo_resources" }
hypo_debug = { path = "../hypo_debug" }
hypo_defaults = { path = "../hypo_defaults" }