[package]
name = "hypo_debug"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veclib = { git = "https://github.com/jedjoud10/veclib" }
hypo_resources = { path = "../hypo_resources" }
hypo_others = { path = "../hypo_others" }
hypo_rendering = { path = "../hypo_rendering" }
hypo_math = { path = "../hypo_math" }
gl = "0.14.0"