[package]
name = "hypo_defaults"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
veclib = { git = "https://github.com/jedjoud10/veclib" }
hypo = { path = "../hypo" }
hypo_math = { path = "../hypo_math" }
hypo_ecs = { path = "../hypo_ecs" }
hypo_systems = { path = "../hypo_systems" }
hypo_rendering = { path = "../hypo_rendering" }
hypo_input = { path = "../hypo_input" }
hypo_others = { path = "../hypo_others" }