[package]
name = "hypo_rendering"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veclib = { git = "https://github.com/jedjoud10/veclib" }
hypo_resources = { path = "../hypo_resources" }
hypo_ecs = { path = "../hypo_ecs" }
hypo_others = { path = "../hypo_others" }
bitflags = "1.3.2"
gl = "0.14.0"
image = "0.23.14"