[package]
name = "hypo_resources_packer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
walkdir = "2.3.2"
byteorder = "1.4.3"
hypo_resources = { path = "../hypo_resources" }
veclib = { git = "https://github.com/jedjoud10/veclib" }