[package]
name = "hypo_systems"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hypo_ecs = { path = "../hypo_ecs" }
hypo_errors = { path = "../hypo_errors" }
hypo_others = { path = "../hypo_others" }
hypo = { path = "../hypo" }