[package]
name = "hypo_terrain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veclib = { git = "https://github.com/jedjoud10/veclib" }
rayon = "1.5.1"
gl = "0.14.0"
hypo_math = { path = "../hypo_math" }
hypo_systems = { path = "../hypo_systems" }
hypo_system_event_data = { path = "../hypo_system_event_data" }
hypo_ecs = { path = "../hypo_ecs" }
hypo_rendering = { path = "../hypo_rendering" }
hypo_others = { path = "../hypo_others" }
hypo_defaults = { path = "../hypo_defaults" }
hypo_input = { path = "../hypo_input" }
hypo_debug = { path = "../hypo_debug" }