[package]
name = "input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.27.5", features = ["serde"] } 
multimap = "0.8.3"
ahash = { version = "0.7.6", features = ["serde"] } 
vek = "0.15.6"
serde_json = "1.0.85"
serde = "1.0.145"
world = { path = "../world" }