[package]
name = "input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.1-beta", features = ["serde"] } 
ahash = { version = "0.7.6", features = ["serde"] } 
utils = { path = "../utils" }
vek = { workspace = true }
serde_json = "1.0.85"
serde = "1.0.145"   
gilrs = { version = "0.10.1", features = ["serde-serialize"] }
world = { path = "../world" }
log = { workspace = true }