[package]
name = "io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
platform-dirs = "0.3.0"
log = { version = "0.4.14", features = ["std"] }
parking_lot = "0.12.0"