[package]
name = "main"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.41.0"
gl = "0.14.0"
veclib = { git = "https://github.com/jedjoud10/veclib" }
world_data = { path = "../world_data" }
systems = { path = "../systems"  }
core = { path = "../core" }
input = { path = "../input" }
others = { path = "../others" }
ecs = { path = "../ecs" }
errors = { path = "../errors" }
rendering = { path = "../rendering" }
assets = { path = "../assets" }
debug = { path = "../debug" }
math = { path = "../math" }
ui = { path = "../ui" }
defaults = { path = "../defaults" }
terrain = { path = "../terrain" }