[package]
name = "math"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
veclib = { git = "https://github.com/jedjoud10/veclib" }
slotmap = "1.0.6"
getset = "0.1.2"
others = { path = "../others" }
enum-as-inner = "0.3.3"