[package]
name = "math"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vek = { workspace = true }
ahash = { workspace = true }
slotmap = "1.0.6"
arrayvec = "0.7.2"
smallvec = "1.8.0"
itertools = "0.10.3"
num-traits = "0.2.15"
half = { version = "2.1.0", features = ["num-traits"] }

[features]
two-dim = []