[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
bytemuck = "1.8.0"
enum-as-inner = "0.4.0"
getset = "0.1.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
laminar = "0.5.0"
crossbeam-channel = "0.5.3"
uuid = { version = "0.8.2", features = ["v4"] }