[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = { path = "../world" }
ecs = { path = "../ecs" }
vek = { workspace = true }
ahash = { workspace = true }
uuid = { version = "1.2.2", features = ["v4"] }
serde = "1.0.145"   
serde_json = "1.0.85"

thiserror = { workspace = true }
log = { workspace = true }
