[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = { path = "../world" }
ecs = { path = "../ecs" }
uuid = { version = "1.2.2", features = ["v4"] }
serde = "1.0.145"
ciborium = "0.2.1"

log = { workspace = true }
thiserror = { workspace = true }
vek = { workspace = true }
ahash = { workspace = true } 