[package]
name = "physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veclib = { git = "https://github.com/jedjoud10/veclib" }
math = { path = "../math" }
rapier3d = "0.11.1"

[profile.dev.package.rapier3d]
opt-level = 3