[package]
name = "physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = { path = "../world" }
math = { path = "../math" }
ecs = { path = "../ecs" }
coords = { path = "../coords" }
utils = { path = "../utils" }
vek = { workspace = true }

[features]
two-dim = ["math/two-dim"]