[package]
name = "physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = { path = "../world" }
math = { path = "../math" }
ecs = { path = "../ecs" }
rendering = { path = "../rendering" }
graphics = { path = "../graphics" }
coords = { path = "../coords" }
utils = { path = "../utils" }
rapier3d = "0.17.2"
rayon = "1.7.0"

log = { workspace = true }
thiserror = { workspace = true }
vek = { workspace = true }
ahash = { workspace = true } 